# sdl3_raycaster

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: utils.h
src/: main.c  utils.c
